; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-switch.c_parse_path.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-switch.c_parse_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_arg_set = type { i32 }
%struct.dm_target = type { i8*, i32, %struct.switch_ctx* }
%struct.switch_ctx = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [21 x i8] c"Device lookup failed\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"Invalid device starting offset\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_arg_set*, %struct.dm_target*)* @parse_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_path(%struct.dm_arg_set* %0, %struct.dm_target* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dm_arg_set*, align 8
  %5 = alloca %struct.dm_target*, align 8
  %6 = alloca %struct.switch_ctx*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.dm_arg_set* %0, %struct.dm_arg_set** %4, align 8
  store %struct.dm_target* %1, %struct.dm_target** %5, align 8
  %9 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %10 = getelementptr inbounds %struct.dm_target, %struct.dm_target* %9, i32 0, i32 2
  %11 = load %struct.switch_ctx*, %struct.switch_ctx** %10, align 8
  store %struct.switch_ctx* %11, %struct.switch_ctx** %6, align 8
  %12 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %13 = load %struct.dm_arg_set*, %struct.dm_arg_set** %4, align 8
  %14 = call i32 @dm_shift_arg(%struct.dm_arg_set* %13)
  %15 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %16 = getelementptr inbounds %struct.dm_target, %struct.dm_target* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @dm_table_get_mode(i32 %17)
  %19 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %20 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %23 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = call i32 @dm_get_device(%struct.dm_target* %12, i32 %14, i32 %18, i32* %26)
  store i32 %27, i32* %8, align 4
  %28 = load i32, i32* %8, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %2
  %31 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %32 = getelementptr inbounds %struct.dm_target, %struct.dm_target* %31, i32 0, i32 0
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8** %32, align 8
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %3, align 4
  br label %73

34:                                               ; preds = %2
  %35 = load %struct.dm_arg_set*, %struct.dm_arg_set** %4, align 8
  %36 = call i32 @dm_shift_arg(%struct.dm_arg_set* %35)
  %37 = call i64 @kstrtoull(i32 %36, i32 10, i64* %7)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %43, label %39

39:                                               ; preds = %34
  %40 = load i64, i64* %7, align 8
  %41 = load i64, i64* %7, align 8
  %42 = icmp ne i64 %40, %41
  br i1 %42, label %43, label %59

43:                                               ; preds = %39, %34
  %44 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %45 = getelementptr inbounds %struct.dm_target, %struct.dm_target* %44, i32 0, i32 0
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8** %45, align 8
  %46 = load %struct.dm_target*, %struct.dm_target** %5, align 8
  %47 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %48 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %47, i32 0, i32 1
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %48, align 8
  %50 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %51 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i64 %52
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 8
  %56 = call i32 @dm_put_device(%struct.dm_target* %46, i32 %55)
  %57 = load i32, i32* @EINVAL, align 4
  %58 = sub nsw i32 0, %57
  store i32 %58, i32* %3, align 4
  br label %73

59:                                               ; preds = %39
  %60 = load i64, i64* %7, align 8
  %61 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %62 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %61, i32 0, i32 1
  %63 = load %struct.TYPE_2__*, %struct.TYPE_2__** %62, align 8
  %64 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %65 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %63, i64 %66
  %68 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %67, i32 0, i32 0
  store i64 %60, i64* %68, align 8
  %69 = load %struct.switch_ctx*, %struct.switch_ctx** %6, align 8
  %70 = getelementptr inbounds %struct.switch_ctx, %struct.switch_ctx* %69, i32 0, i32 0
  %71 = load i64, i64* %70, align 8
  %72 = add i64 %71, 1
  store i64 %72, i64* %70, align 8
  store i32 0, i32* %3, align 4
  br label %73

73:                                               ; preds = %59, %43, %30
  %74 = load i32, i32* %3, align 4
  ret i32 %74
}

declare dso_local i32 @dm_get_device(%struct.dm_target*, i32, i32, i32*) #1

declare dso_local i32 @dm_shift_arg(%struct.dm_arg_set*) #1

declare dso_local i32 @dm_table_get_mode(i32) #1

declare dso_local i64 @kstrtoull(i32, i32, i64*) #1

declare dso_local i32 @dm_put_device(%struct.dm_target*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
